# NetCore

./: CMakeLists.txt  NetServer.cpp
Client/: Client.cpp  Connect.h  INetClient.h  NetClient.cpp  NetClient.h  ProtoBuffer.h
Server/: CMakeLists.txt  Connect.cpp  INetServer.h  Makefile  NetServer.h  ProtoBuffer.cpp  Server.cpp
